Boxes sized correctly + boxes displayed as vlock on small devices

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ nav {
 .boxes {
     width: 92%;
     margin: 20px auto;
-    color: #ffffff;
     text-align: center;
     padding:20px 15px 0px 15px; 
 
@@ -118,6 +117,7 @@ nav {
 .box {
     display: inline-block;
     width: 30%;
+    height: 24vw;
     background-color: #fff;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -139,5 +139,9 @@ nav {
 @media only screen and (max-device-width: 1366px) {
     .parallax {
       background-attachment: scroll;
+    }
+
+    .box {
+        display: block;
     }
 }
